   * with-decorator: Allow a `setv` form as the form to be decorated
   * xor: If exactly one argument is true, return it
   * hy.core.reserved is now hy.extra.reserved

   [ Bug Fixes ]
   * Shadowed comparison operators now use `and` instead of `&`
     for chained comparisons
   * partition no longer prematurely exhausts input iterators

Changes from 0.12.0

   [ Bug Fixes ]
   * Allow installation without Git

Changes from 0.11.0

This release brings some quite significant changes on the language and as a
result very large portions of previously written Hy programs will require
changes. At the same time, documentation and error messages were improved,
hopefully making the language easier to use.

   [ Language Changes ]
   * New syntax for let, with and defclass
   * defmacro will raise an error on &kwonly, &kwargs and &key arguments
   * Keyword argument labels to functions are required to be strings
   * slice replaced with cut to stop overloading the python built-in
   * removed reduntant throw, catch, progn, defun, lisp-if, lisp-if-not,
     filterfalse, true, false and nil
   * global now takes multiple arguments
   * Nonlocal keyword (Python 3 only)
   * Set literals (#{1 2 3})
   * Keyword-only arguments (Python 3 only)
   * Setv can assign multiple variables at once
   * Empty form allowed for setv, del and cond
   * One-argument division, rationals and comparison operators (=, !=, <, >, <=, >=)
   * partition form for chunking collection to n-sized tuples
   * defn-alias and demacro-alias moved into hy.contrib.alias
   * None is returned instead of the last form in --init--
   * for and cond can take a multi-expression body
   * Hex and octal support for integer literals
   * Apply now mangles strings and keywords according to Hy mangling rules
   * Variadic if
   * defreader can use strings as macro names
   * as-> macro added
   * require syntax changed and now supports same features as import
   * defmulti changed to work with dispatching function