@@ -1055,6 +1055,19 @@
   (assert (= None (eval (quote (print ""))))))
 
 
+(defn test-eval-false []
+  (assert (is (eval 'False) False))
+  (assert (is (eval 'None) None))
+  (assert (= (eval '0) 0))
+  (assert (= (eval '"") ""))
+  (assert (= (eval 'b"") b""))
+  (assert (= (eval ':) :))
+  (assert (= (eval '[]) []))
+  (assert (= (eval '(,)) (,)))
+  (assert (= (eval '{}) {}))
+  (assert (= (eval '#{}) #{})))
+
+
 (defn test-eval-globals []
   "NATIVE: test eval with explicit global dict"
   (assert (= 'bar (eval (quote foo) {'foo 'bar})))
@@ -1383,7 +1396,16 @@
 
 (defn test-read-str []
   "NATIVE: test read-str"
-  (assert (= (read-str "(print 1)") '(print 1))))
+  (assert (= (read-str "(print 1)") '(print 1)))
+  (assert (is (type (read-str "(print 1)")) (type '(print 1))))
+
+  ; Watch out for false values: https://github.com/hylang/hy/issues/1243
+  (assert (= (read-str "\"\"") '""))
+  (assert (is (type (read-str "\"\"")) (type '"")))
+  (assert (= (read-str "[]") '[]))
+  (assert (is (type (read-str "[]")) (type '[])))
+  (assert (= (read-str "0") '0))
+  (assert (is (type (read-str "0")) (type '0))))
 
 (defn test-keyword-creation []
   "NATIVE: Test keyword creation"
