@@ -15,6 +15,8 @@ Changes from 0.12.1
    * Shadowed comparison operators now use `and` instead of `&`
      for chained comparisons
    * partition no longer prematurely exhausts input iterators
+   * read and read-str no longer raise an error when the input
+     parses to a false value (e.g., the empty string)
 
 Changes from 0.12.0
 
